update internship - completely redone